Dal v.1 fix checker

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DAL</title>
+  <title>DAL - </title>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +19,7 @@
       <span> Right: {{ rightScore }}</span> // <span> Wrong: {{ wrongScore }}</span>
     </div>
     <div class="button-container">
-      <button @click="updateWord">Update Word</button>
+      <button @click="updateWord">Update Word ({{ timer }})</button>
     </div>
     <div class="word-count">
       <h2>Word Count</h2>
